sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:30: error: too many arguments for method rechercheMin: ()Int
    echange(i,rechercheMin(i))
                          ^